Update Maven configuration
Refine `pom.xml` and `settings.xml` to include additional dependencies (e.g., Lanterna, Gson, Quartz) and enhance build plugins for assembly and packaging tasks.

Signed-off-by: Drachir000 <contact@drachir000.de>